--- a/idcard/projectidcard/ritika/requirements.txt
+++ b/idcard/projectidcard/ritika/requirements.txt
@@ -2,6 +2,16 @@ streamlit
 numpy
 pillow
 opencv-contrib-python
+opencv-python
+numpy
+Pillow
+dlib-bin
+rembg
+streamlit
+pandas
+fpdf
+st-aggrid
+reportlab
 
 altair
 attrs
