environment.bak.yml

--- a/idcard/projectidcard/ritika/environment.bak.yml
+++ b/idcard/projectidcard/ritika/environment.bak.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python==3.8
-  - cmake==3.21.1
+  - python
+  - cmake
   - dlib
   - opencv
