--- a/idcard/projectidcard/ritika/requirements.txt
+++ b/idcard/projectidcard/ritika/requirements.txt
@@ -1,1 +1,91 @@
-
+opencv-python-headless
+altair
+attrs
+blinker
+cachetools
+certifi
+chardet
+charset-normalizer
+click
+colorama
+coloredlogs
+distlib
+entrypoints
+face-crop-plus
+filelock
+flatbuffers
+fpdf
+fsspec
+gitdb
+GitPython
+humanfriendly
+idna
+imageio
+importlib_metadata
+Jinja2
+jsonschema
+jsonschema-specifications
+lazy_loader
+llvmlite
+markdown-it-py
+MarkupSafe
+mdurl
+mkl
+mpmath
+networkx
+numba
+numpy
+onnxruntime
+opencv-python
+opencv-python-headless
+packaging
+pandas
+Pillow
+platformdirs
+pooch
+protobuf
+pyarrow
+pydeck
+Pygments
+PyMatting
+Pympler
+PyMuPDF
+PyMuPDFb
+pyreadline3
+python-dateutil
+python-decouple
+pytz
+referencing
+rembg
+reportlab
+requests
+rich
+rpds-py
+scikit-image
+scipy
+semver
+six
+smmap
+streamlit
+streamlit-aggrid
+sympy
+tbb
+tenacity
+tifffile
+toml
+toolz
+torch
+torchvision
+tornado
+tqdm
+typing_extensions
+tzdata
+tzlocal
+Unidecode
+urllib3
+validators
+virtualenv
+watchdog
+zipp
+rembg[gpu]
+rembg
