--- a/idcard/projectidcard/ritika/requirements.txt
+++ b/idcard/projectidcard/ritika/requirements.txt
@@ -88,3 +88,17 @@ watchdog
 zipp
 rembg[gpu]
 rembg
+easyocr
+matplotlib
+matplotlib-inline
+pandas
+pandocfilters
+Pillow
+requests
+scikit-image
+scipy
+seaborn
+streamlit
+torch
+torchvision
+tqdm
