--- a/idcard/projectidcard/ritika/requirements.txt
+++ b/idcard/projectidcard/ritika/requirements.txt
@@ -1,3 +1,36 @@
+certifi
+charset-normalizer
+click
+dataclasses
+decorator
+entrypoints
+fsspec
+idna
+importlib-metadata
+numpy
+packaging
+pandas
+Pillow
+protobuf
+pyarrow
+pyparsing
+python-dateutil
+pytz
+PyYAML
+requests
+six
+smmap
+streamlit
+st-aggrid
+toml
+torch
+torchvision
+typing-extensions
+urllib3
+validators
+
+
+
 dlib-bin
 opencv-python-headless
 onnxruntime 
