--- a/idcard/projectidcard/ritika/requirements.txt
+++ b/idcard/projectidcard/ritika/requirements.txt
@@ -1,7 +1,34 @@
-
-
-
-
+certifi
+charset-normalizer
+click
+dataclasses
+decorator
+entrypoints
+fsspec
+google-auth
+idna
+importlib-metadata
+numpy
+packaging
+pandas
+Pillow
+protobuf
+pyarrow
+pyparsing
+python-dateutil
+pytz
+PyYAML
+requests
+six
+smmap
+streamlit
+st-aggrid
+toml
+torch
+torchvision
+typing-extensions
+urllib3
+validators
 dlib-bin
 opencv-python-headless
 onnxruntime 
