--- a/idcard/projectidcard/ritika/requirements.txt
+++ b/idcard/projectidcard/ritika/requirements.txt
@@ -2,7 +2,8 @@ gspread
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
-
+google-cloud-storage
+google-auth
 google_auth 
 dlib-bin
 opencv-python-headless
