--- a/idcard/projectidcard/ritika/secrets.toml
+++ b/idcard/projectidcard/ritika/secrets.toml
@@ -1,3 +1,5 @@
+[secrets]
+["google_cloud"] = '''
 {
   "type": "service_account",
   "project_id": "ceeriintern",
@@ -9,5 +11,7 @@
   "token_uri": "https://oauth2.googleapis.com/token",
   "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
   "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/ceeriintern%40ceeriintern.iam.gserviceaccount.com",
-  "universe_domain": "googleapis.com"
+  "universaldomain": "googleapis.com"
 }
+'''
+
