--- a/idcard/projectidcard/ritika/secrets.toml
+++ b/idcard/projectidcard/ritika/secrets.toml
@@ -1,5 +1,5 @@
 [secrets]
-["google_cloud"] =
+["google_cloud"] = '''
 {
   "type": "service_account",
   "project_id": "ceeriintern",
@@ -13,5 +13,6 @@
   "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/ceeriintern%40ceeriintern.iam.gserviceaccount.com",
   "universaldomain": "googleapis.com"
 }
+'''
 
 
